# video-splitter

./: .gitignore  Cargo.toml  README.md  config.txt  input.txt
.devcontainer/: Dockerfile
src/: config.rs  error.rs  input.rs  main.rs  output.rs  video.rs
