[package]
name = "video-splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vid2img = "0.1.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
image = "0.24.3"
indicatif = "0.16.2"
colored = "2.0.0"